kubeflow-deployments/jlewi-v1-1/.build/iap-ingress/networking.k8s.io_v1beta1_ingress_envoy-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/ssl-redirect: "true"
    kubernetes.io/ingress.global-static-ip-name: jlewi-0717-001-ip
    networking.gke.io/managed-certificates: gke-certificate
  labels:
    kustomize.component: iap-ingress
  name: envoy-ingress
  namespace: istio-system
spec:
  rules:
  - host: jlewi-0717-001.endpoints.PROJECT.cloud.goog
    http:
      paths:
      - backend:
          serviceName: istio-ingressgateway
          servicePort: 80
        path: /*
